--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
-version: '3'
-
 services:
+
   mysql:
-    image: mysql:5.7
     container_name: mysql
-    restart: always
+    image: mysql/mysql-server:8.0.26
+    command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: orders
+      MYSQL_USER: root
       MYSQL_PASSWORD: root
+      MYSQL_DATABASE: orders
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      retries: 5
     ports:
-      - 3306:3306
-    volumes:
-      - .docker/mysql:/var/lib/mysql
+      - "3306:3306"
 
   rabbitmq:
     image: rabbitmq:3-management
