--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,17 @@
 # Go workspace file
 go.work
 go.work.sum
+
+### VisualStudioCode ###
+.vscode/*
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
